<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.ViewPagerScreen">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/swipe_to_view_introduction_slides"
        app:layout_constraintBottom_toTopOf="@+id/tab_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_azkare"
        android:text="@string/next_bt"
        android:textColor="#707070"
        android:contentDescription="@string/next_button_to_proceed_to_the_next_slide"
        app:layout_constraintBottom_toBottomOf="@+id/tab_indicator"
        app:layout_constraintEnd_toStartOf="@+id/tab_indicator"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        app:layout_constraintVertical_bias="0.41000003" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/slide_indicators"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/indicitor_selector">

    </com.google.android.material.tabs.TabLayout>

    <Button
        android:id="@+id/btn_GetStarted"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:background="@drawable/btn_startview"
        android:elevation="2dp"
        android:text="@string/do_it"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        android:contentDescription="@string/start_button_to_begin_using_the_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:visibility="gone"
        android:contentDescription="@string/dialog_to_set_notification_frequency"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_GetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/average_notification_splash"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTimeSBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/time_sbar"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:contentDescription="@string/notification_frequency_set_to_3_minutes" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/minute"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_azkare"
                android:max="60"
                android:progress="3"
                android:progressTint="@color/colorAccent"
                android:thumbTint="@color/colorAccent"
                android:contentDescription="@string/seekbar_to_adjust_notification_frequency" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>